fix(style): Adjust layout and formatting on web pages
- Corrected layout issues caused by inconsistent CSS.
- Updated `style.css` to improve overall page formatting and responsiveness.

- CSSの不整合によって生じていたレイアウトの問題を修正。
- `style.css`を更新し、全体的なページフォーマットとレスポンシブ表示を改善。

--- a/docs/style.css
+++ b/docs/style.css
@@ -21,7 +21,7 @@ li {
 }
 
 h4 {
-    margin-left: 30px;
+    margin-left: 60px;
     line-height: 100%;
     margin-bottom: -10px;
 }
@@ -35,5 +35,5 @@ h4 {
 
 .project-timeline-lore, .project-entry-lore {
     line-height: 100%;
-    margin-left: 40px;
+    margin-left: 60px;
 }
